SPCTR-1468: Fixed Shrinking Side Aligned Icon Issue

--- a/src/blocks/info-box/editor.lazy.scss
+++ b/src/blocks/info-box/editor.lazy.scss
@@ -20,3 +20,11 @@
 		margin-top: 0;
 	}
 }
+
+.uagb-infobox-icon-left,
+.uagb-infobox-icon-right {
+	// This is added since the editor Desktop View applies a default Border Box for all elements.
+	svg {
+		box-sizing: content-box;
+	}
+}
